--- a/Beginner-full-stack/index.html
+++ b/Beginner-full-stack/index.html
@@ -4,19 +4,22 @@
     <title>Document</title>
 </head>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.7.7/axios.min.js"></script>
+
 <body>
-    <div>
-        Sign-Up :
-        <input type="text" id="signup-username" name="username" placeholder="Username">
-        <input type="password" id="signup-password" name="password" placeholder="Password">
-        <button onclick="signup()">Submit</button>
-    </div>
-    <br>
-    <div>
-        Sign-In :
-        <input type="text" id="signin-username" name="username" placeholder="Username">
-        <input type="password" id="signin-password" name="password" placeholder="Password">
-        <button onclick="signin()">Submit</button>
+    <div id="auth-div" style="display: block;" >
+        <div>
+            Sign-Up :
+            <input type="text" id="signup-username" name="username" placeholder="Username">
+            <input type="password" id="signup-password" name="password" placeholder="Password">
+            <button onclick="signup()">Submit</button>
+        </div>
+        <br>
+        <div>
+            Sign-In :
+            <input type="text" id="signin-username" name="username" placeholder="Username">
+            <input type="password" id="signin-password" name="password" placeholder="Password">
+            <button onclick="signin()">Submit</button>
+        </div>
     </div>
     <br>
     <div>
@@ -26,52 +29,58 @@
     </div>
     <br>
     <div>
-        <button onclick="logout()" >Logout</button>
+        <button onclick="logout()">Logout</button>
     </div>
+    <!-- <br>
+        <div id="myElement" style="display: none;">This content is initially hidden.</div>
+        <button onclick="document.getElementById('myElement').style.display = 'block';">Show</button>
+        <button onclick="document.getElementById('myElement').style.display = 'none';">Hide</button> -->
 
-<script>
-    const signup = async () => {
-        const username = document.getElementById("signup-username").value;
-        const password = document.getElementById("signup-password").value;
+    <script>
+        const signup = async () => {
+            const username = document.getElementById("signup-username").value;
+            const password = document.getElementById("signup-password").value;
 
-        await axios.post("http://localhost:3000/sign-up", {
-            username: username,
-            password: password    
-        });
-        alert("Sign-Up Successful");
-    }
+            await axios.post("http://localhost:3000/sign-up", {
+                username: username,
+                password: password
+            });
+            alert("Sign-Up Successful");
+        }
 
 
-    const signin = async () => {
-        const username = document.getElementById("signin-username").value;
-        const password = document.getElementById("signin-password").value;
+        const signin = async () => {
+            const username = document.getElementById("signin-username").value;
+            const password = document.getElementById("signin-password").value;
 
-        const response = await axios.post("http://localhost:3000/sign-in", {
-            username: username,
-            password: password    
-        });
-        // stores the token in local storage
-        localStorage.setItem("token", response.data.token);
-        alert("Sign-In Successful");
-    }
+            const response = await axios.post("http://localhost:3000/sign-in", {
+                username: username,
+                password: password
+            });
+            // stores the token in local storage
+            localStorage.setItem("token", response.data.token);
+            document.getElementById("auth-div").style.display = "none";
+            alert("Sign-In Successful");
+        }
 
-    const getInfo = async () => {
-        document.getElementById("information").innerHTML = "No Information Found";
-        const response = await axios.get("http://localhost:3000/me", {
-          headers : {
-            token : localStorage.getItem("token")
-          }  
-        })
-        document.getElementById("information").innerHTML = "Username: " + response.data.username + "<br>" + "Password: " + response.data.password;
-        console.log(response.data);
-    }
-    const logout = async () => {
-        localStorage.removeItem("token");
-        alert("Logout Successful")
-    }
-    
+        const getInfo = async () => {
+            document.getElementById("information").innerHTML = "No Information Found";
+            const response = await axios.get("http://localhost:3000/me", {
+                headers: {
+                    token: localStorage.getItem("token")
+                }
+            })
+            document.getElementById("information").innerHTML = "Username: " + response.data.username + "<br>" + "Password: " + response.data.password;
+            console.log(response.data);
+        }
+        const logout = async () => {
+            localStorage.removeItem("token");
+            document.getElementById("information").innerHTML = "";
+            alert("Logout Successful")
+        }
 
-</script>
+
+    </script>
 </body>
 
 </html>
